--- a/plumeti/views/cart.ejs
+++ b/plumeti/views/cart.ejs
@@ -27,7 +27,7 @@
 	<div class="container">
 		<div class="row d-flex align-items-center">
 			<section id="tablaFirst" class="col-12 d-flex align-items-center">
-				<img class="col-2" src="/images/boquitas pintadas mostrado.HEIC" alt="BOQUITAS PINTADAS">
+				<img class="col-2" src="/images/boquitas-pintadas-1.HEIC" alt="BOQUITAS PINTADAS">
 				<span class="col-3 ">BOQUITAS PINTADAS</span>
 				<span class="col-4 ">
 					<div id="botonModificar" class="btn-group mr-2 .btn-group-*" role="group" aria-label="Second group">
@@ -42,7 +42,7 @@
 		</div>
 		<div class="row d-flex align-items-center">
 			<section id="tablaMiddle" class="col-12 d-flex align-items-center">
-				<img class="col-2 col-xs-1" src="/images/boquitas pintadas mostrado.HEIC" alt="BOQUITAS PINTADAS">
+				<img class="col-2 col-xs-1" src="/images/boquitas-pintadas-1.HEIC" alt="BOQUITAS PINTADAS">
 				<span class="col-3">BOQUITAS PINTADAS</span>
 				<span class="col-4">
 					<div id="botonModificar" class="btn-group mr-2 .btn-group-*" role="group" aria-label="Second group">
