--- a/plumeti/views/detail.ejs
+++ b/plumeti/views/detail.ejs
@@ -43,16 +43,13 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="/images/Boquitas pintadas mostrado.heic"
-                                    alt="First slide">
+                                <img class="d-block w-100" src="/images/<%=prod.image%>" alt="First slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="/images/Boquitas pintadas en packaging.heic"
-                                    alt="Second slide">
+                                <img class="d-block w-100" src="/images/<%=prod.image2%>" alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="/images/Boquitas pintadas doblado.heic"
-                                    alt="Third slide">
+                                <img class="d-block w-100" src="/images/<%=prod.image3%>" alt="Third slide">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
@@ -69,14 +66,13 @@
                 </div>
             </div>
             <div class="col-lg-7 col-md-6 col-sm-12 product mt-5">
+
                 <div class="right">
-                    <h2 class="text-center my-3">Pañuelo BOQUITAS PINTADAS</h2>
-                    <h2 class="text-center my-3">$300</h2>
-                    <p class="text-center my-3">Descripción:<br>
-                        Pañuelo sublimado con estampa exclusiva Plumeti <br>
-                        Composición: 100% poliester <br>
-                        Medidas: 70 x 70 cms <br>
-                        <div id="aclaracion">Foto referencial: al estamparse los colores se pueden oscurecer</div>
+                    <h2 class="text-center my-3"><%=prod.name%></h2>
+                    <h2 class="text-center my-3">$<%=prod.price%></h2>
+                    <p class="text-center my-3"><%=prod.description%><br>
+                        <%=prod.composicion%>
+                        <div id="aclaracion"><%=prod.aclaracion%></div>
                     </p>
                 </div>
             </div>
@@ -111,38 +107,39 @@
     <div class="container">
         <form>
             <div class="form-group">
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Dejanos tu comentario!"></textarea>
-              </div>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                    placeholder="Dejanos tu comentario!" action="/detail" ></textarea>
+            </div>
+            <button>Enviar</button>
         </form>
     </div>
 
     <div class="container">
         <div col="row">
+            <% comments.forEach(function(comment){ %>
             <div class="publicado">
-                <h4>Hola, queria saber si destiñe? Gracias</h4><br>
-                <h6>Hola, no destiñe dado que es sublimado</h6>
+                <h4><%=comment.pregunta%></h4><br>
+                <h6><%=comment.respuesta%></h6>
                 <br>
             </div>
-            <div class="publicado">
-                <h4>Hola, viene en caja como se ve en la foto? Gracias</h4><br>
-                <h6>Hola, si! como se ve en las imágenes!</h6>
-                <br>
-            </div>
+            <% }) %>
         </div>
     </div>
 
-    <%- include('partials/footer.ejs') %>
-    </main>
-    <!-- Hoja de estilo para el footer footer.css -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+
+
+        <%- include('partials/footer.ejs') %>
+        </main>
+        <!-- Hoja de estilo para el footer footer.css -->
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
