Holiss :) pasando parte del home a ejs ajustes del json de productos y de usuarios creacion del formulario de edicion de productos Chauu ;)

--- a/plumeti/public/stylesheets/home.css
+++ b/plumeti/public/stylesheets/home.css
@@ -18,3 +18,9 @@ section article.banner{
     background-image: url('/images/slider2.jpg');
     background-size: cover;
 }
+a.producto{
+    transition: .3s;
+}
+a.producto:hover{
+    transform: scale(1.03);
+}
