--- a/plumeti/views/admproducts.ejs
+++ b/plumeti/views/admproducts.ejs
@@ -81,7 +81,7 @@
         <div class="col-2 ">20 en stock</div>
         <div class="col-2 ">$750</div>
         <div class="col-2  d-flex justify-content-around align-items-center">
-            <i class="fas fa-edit "></i>
+            <a href="/products/id/edit"> <i class="fas fa-edit "></i> </a>
             <i class="fas fa-trash"></i>
         </div>
     </div>
