--- a/plumeti/views/partials/footer.ejs
+++ b/plumeti/views/partials/footer.ejs
@@ -7,16 +7,16 @@
 
 
             <span class="py-5 col-lg-6 col-md-6 col-sm-12 text-center">
-                <a href="">
+                <a href="https://www.facebook.com/PlumetiDeco/">
                     <i class="ml-3 fab fa-facebook-f"></i>
                 </a>
-                <a href="">
+                <a href="https://www.instagram.com/plumetitextil/">
                     <i class="ml-3 fab fa-instagram"></i>
                 </a>
-                <a href="">
+                <a href="tel:+5491167467772">
                     <i class="ml-3 fab fa-whatsapp"></i>
                 </a>
-                <a href="">
+                <a href="mailto:clariric@gmail.com">
                     <i class="ml-3 fas fa-envelope"></i>
                 </a>
             </span>
