--- a/plumeti/views/detail.ejs
+++ b/plumeti/views/detail.ejs
@@ -72,7 +72,7 @@
                     <h2 class="text-center my-3">$<%=prod.price%></h2>
                     <p class="text-center my-3"><%=prod.description%><br>
                         <%=prod.composicion%>
-                        <div id="aclaracion"><%=prod.aclaracion%></div>
+                        <div id="aclaracion">Aclaración: <%=prod.aclaracion%></div>
                     </p>
                 </div>
             </div>
