arreglo del metodo DELETE y cambio del css del  boton trash

--- a/plumeti/public/stylesheets/admproducts.css
+++ b/plumeti/public/stylesheets/admproducts.css
@@ -41,3 +41,8 @@ input[type='file'] {
    padding: 100px;
     border: 1px dashed black;  
   }
+
+  .trash{
+      background-color: transparent;
+      border: none;outline: none;
+  }
