--- a/plumeti/views/products.ejs
+++ b/plumeti/views/products.ejs
@@ -29,8 +29,8 @@
                     <div class="navBar">
                         <div>
                             <ul class="text-center">Ordenar por:
-                              <a href="#"><li class="text-center">Categoria</li></a>
-                              <a href="#"><li class="text-center">Tamaño</li></a>
+                              <a href="/products/nuevo"><li class="text-center">Nuevos</li></a>
+                              <a href="/products/destacado"><li class="text-center">Destacados</li></a>
                             </ul>
                           </div>
 
