--- a/plumeti/public/stylesheets/navbar.css
+++ b/plumeti/public/stylesheets/navbar.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 16px;
     font-family: 'Baloo Paaji 2';
     letter-spacing: 3px;
     line-height: 2rem;
@@ -54,4 +54,19 @@ input:focus, input.form-control:focus {
     box-shadow: none;
     -moz-box-shadow: none;
     -webkit-box-shadow: none;
+}
+
+#botonLogout{
+    background: none;
+    border: 0;
+    color: #909090;
+    /* cursor: default; */
+    font: inherit;
+    line-height: normal;
+    overflow: visible;
+    padding-top: 15px;
+    -webkit-user-select: none; /* for button */
+     -webkit-appearance: button; /* for input */
+       -moz-user-select: none;
+        -ms-user-select: none;
 }
