--- a/plumeti/views/personal-data.ejs
+++ b/plumeti/views/personal-data.ejs
@@ -40,7 +40,7 @@
                             <div class="input-group-prepend">
                               <span class="input-group-text basic-addon1"><i class="fas fa-user"></i></span>
                             </div>
-                            <input type="text" class="form-control" placeholder="Nombre y apellido" aria-label="Nombre y apellido" aria-describedby="basic-addon1">
+                            <input type="text" class="form-control" placeholder="<%=userLogged.nombre%>" aria-label="Nombre y apellido" aria-describedby="basic-addon1">
                           </div>
                         </div>
 
@@ -63,7 +63,7 @@
                                 <div class="input-group-prepend">
                                   <span class="input-group-text basic-addon1"><i class="fas fa-envelope"></i></i></span>
                                 </div>
-                                <input type="text" class="form-control" placeholder="Correo" aria-label="Correo" aria-describedby="basic-addon1">
+                                <input type="text" class="form-control" placeholder="<%=userLogged.email%>" aria-label="Correo" aria-describedby="basic-addon1">
                               </div>
                         </div>
 
